// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "objectid",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "_id",
    "schemaName": "testdb",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "string",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "email",
    "schemaName": "testdb",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "date",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "createdAt",
    "schemaName": "testdb",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "object",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "name": "profile",
    "objectDefinition": {
      "columns": [
        {
          "dataType": "string",
          "defaultValue": undefined,
          "description": undefined,
          "enumValues": undefined,
          "isArray": false,
          "isEnum": false,
          "isNullable": false,
          "isReadOptional": true,
          "isSerial": false,
          "isWritable": true,
          "isWriteOptional": true,
          "maxLen": undefined,
          "minLen": undefined,
          "name": "displayName",
          "tableName": "users",
          "tableType": "table",
          "zodType": "string",
        },
        {
          "dataType": "int",
          "defaultValue": undefined,
          "description": undefined,
          "enumValues": undefined,
          "isArray": false,
          "isEnum": false,
          "isNullable": false,
          "isReadOptional": true,
          "isSerial": false,
          "isWritable": true,
          "isWriteOptional": true,
          "maxLen": undefined,
          "minLen": undefined,
          "name": "age",
          "tableName": "users",
          "tableType": "table",
          "zodType": "int",
        },
      ],
      "name": "users.profile",
      "type": "object",
    },
    "schemaName": "testdb",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "array",
    "isArray": true,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "name": "tags",
    "schemaName": "testdb",
    "tableName": "users",
    "tableType": "table",
  },
]
`;

exports[`returns schema models > usersTable 1`] = `
{
  "columns": [
    {
      "dataType": "objectid",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "_id",
      "objectDefinition": undefined,
      "schemaName": "testdb",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "string",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "email",
      "objectDefinition": undefined,
      "schemaName": "testdb",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "date",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "createdAt",
      "objectDefinition": undefined,
      "schemaName": "testdb",
      "tableName": "users",
      "tableType": "table",
      "zodType": "date",
    },
    {
      "dataType": "object",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "profile",
      "objectDefinition": {
        "columns": [
          {
            "dataType": "string",
            "defaultValue": undefined,
            "description": undefined,
            "enumValues": undefined,
            "isArray": false,
            "isEnum": false,
            "isNullable": false,
            "isReadOptional": true,
            "isSerial": false,
            "isWritable": true,
            "isWriteOptional": true,
            "maxLen": undefined,
            "minLen": undefined,
            "name": "displayName",
            "tableName": "users",
            "tableType": "table",
            "zodType": "string",
          },
          {
            "dataType": "int",
            "defaultValue": undefined,
            "description": undefined,
            "enumValues": undefined,
            "isArray": false,
            "isEnum": false,
            "isNullable": false,
            "isReadOptional": true,
            "isSerial": false,
            "isWritable": true,
            "isWriteOptional": true,
            "maxLen": undefined,
            "minLen": undefined,
            "name": "age",
            "tableName": "users",
            "tableType": "table",
            "zodType": "int",
          },
        ],
        "name": "users.profile",
        "type": "object",
      },
      "schemaName": "testdb",
      "tableName": "users",
      "tableType": "table",
      "zodType": "object",
    },
    {
      "dataType": "array",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": true,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "tags",
      "objectDefinition": undefined,
      "schemaName": "testdb",
      "tableName": "users",
      "tableType": "table",
      "zodType": "any",
    },
  ],
  "name": "users",
  "schemaName": "testdb",
  "type": "table",
}
`;
